Cleaned up markup

--- a/public/index.html
+++ b/public/index.html
@@ -15,20 +15,13 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="img/favicon/manifest.json">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico">
     <link rel="stylesheet" href="js/lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="js/lib/angular-animate-css/build/nga.all.min.css">
     <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Burson-Marsteller</title>
+    <title>ambur</title>
 </head>
 <body>
 <div class="container-fluid">
