--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="js/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="js/lib/bootstrap-material-design/dist/bootstrap-material-design.min.css">
+    <link rel="stylesheet" href="js/lib/tether/dist/css/tether.min.css">
+    <link rel="stylesheet" href="js/lib/tether/dist/css/tether-theme-basic.min.css">
     <link rel="stylesheet" href="js/lib/angular-animate-css/build/nga.all.min.css">
     <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -38,6 +41,10 @@
 <script type="text/javascript" src="js/lib/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="js/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/lib/tether/dist/js/tether.min.js"></script>
+<script type="text/javascript"
+        src="js/lib/bootstrap-material-design/dist/bootstrap-material-design.iife.min.js"></script>
+<script type="text/javascript" src="js/lib/bootstrap-material-design/dist/bootstrap-material-design.umd.js"></script>
 
 <script type="text/javascript" src="js/script.js"></script>
 </body>
