--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="js/lib/angular-animate-css/build/nga.all.min.css">
     <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>ambur</title>
+    <title>Loading...</title>
 </head>
 <body>
 <div class="container-fluid">
