--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div ng-show="!hidden && !loading" class="col-md-1 sidebar_container" sideBar></div>
     <div class="col-md-11" ng-view></div>
 </div>
-<footer foot></footer>
+<foot><foot/>
 <script type="text/javascript" src="js/lib/angular/angular.min.js"></script>
 <script type="text/javascript" src="js/lib/angular-animate/angular-animate.min.js"></script>
 <script type="text/javascript" src="js/lib/angular-sanitize/angular-sanitize.min.js"></script>
