--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <head>
     <base href="/">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="js/lib/bootstrap/dist/css/bootstrap.min.css">
@@ -27,20 +27,10 @@
     <title>Loading...</title>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <system></system>
-    </div>
-    <div class="row">
-        <top-bar ng-show="!hidden && !loading" class="topbar_container"></top-bar>
-    </div>
-    <div class="row">
-        <side-bar ng-show="!hidden && !loading" class="col-md-3 sidebar_container"></side-bar>
-        <div class="col-md-9" ng-view></div>
-    </div>
-    <div class="row">
-        <foot></foot>
-    </div>
+<system></system>
+<ng-view></ng-view>
+<div class="row-fluid">
+    <foot class="container-fluid"></foot>
 </div>
 <script type="text/javascript" src="js/lib/angular/angular.min.js"></script>
 <script type="text/javascript" src="js/lib/angular-animate/angular-animate.min.js"></script>
